--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="name-block-container">
                     <h1><span>Hi, I'm</span>Hemanth Kandula</h1>
                     <h2 id="element"></h2>
-                    <a target="_blank" href="#" class="btn btn-download">Download Resume</a>
+                    <a class="btn btn-download" href="/docs/CV-Hemanth_Kandula.pdf" target="_blank">Download Resume</a>
                     <ul class="social">
                         <li><a href="https://github.com/hemanthkandula" target="_blank" ><i class="ion-social-github"></i></a></li>
                         <!--<li><a href=""><i class="ion-social-twitter"></i></a></li>-->
