--- a/index.html
+++ b/index.html
@@ -82,13 +82,16 @@
                     <div class="block-content">
                         <h3 class="block-title">Profile</h3>
                         <h3 class="subheading">I'm a <strong>AI Researcher & APP Developer</strong>. I aim to make a difference through my creative solutions.</h3>
-                        <p>Interested Research in Machine Learning/Deep Learning for Computer Vision applications and Robotics. My current research is in the field of computational imaging for high-throughput microscopy, where my goal is to exploit joint hardware and deep learning algorithm design to improve upon space-bandwidth product of traditional and computational imaging system..</p>
+                        <p>Interested research in Computer Vision and Robotics. My current research is in the field of
+                            computational imaging for high-throughput microscopy, where my goal is to exploit joint
+                            hardware and deep learning algorithm design to improve upon space-bandwidth product of
+                            traditional and computational imaging system.</p>
                         <div class="info-list row">
                             <div class="col-sm-6"><span>Name : </span> Sai Hemanth Kumar Kandula</div>
-                            <div class="col-sm-6"><span>Date of birth : </span> Ma 28, 1997 </div>
+                            <div class="col-sm-6"><span>Date of birth : </span> May 28, 1997</div>
                             <div class="col-sm-6"><span>Address : </span> Cambridge ,USA.</div>
                             <div class="col-sm-6"><span>Email : </span> shkandula[a]bwh.harvard.edu</div>
-                            <div class="col-sm-6"><span>Phone : </span> + 1(617)631-8399</div>
+                            <div class="col-sm-6"><span>Phone : </span> + 1(347)766-5083</div>
                             <!--<div class="col-sm-6"><span>Skype : </span> James.Bond</div>-->
                             <!--<div class="col-sm-6"><span>Interest : </span> freelance, full-time</div>-->
                         </div>
@@ -129,10 +132,14 @@
                                     <div class="exp-holder">
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h4><span>Graduate Researcher</span> Shafiee Lab @ Harvard Medical School</h4>
+                                                <h4><span>Research Assistant</span> Shafiee Lab @ Harvard Medical School
+                                                </h4>
                                                 <h5>Oct 2018 - <span class="current">Present</span></h5>
                                             </div>
-                                            <p> .....</p>
+                                            <p> I worked on the development of diagnostic devices , mobile and web
+                                                applications for human embryo quality assessment, and male fertility
+                                                prediction based on sperm morphology. I played a significant role in
+                                                ‘Point-of-care ovulation’.</p>
                                         </div>
                                         <div class="exp">
                                             <div class="hgroup">
@@ -143,7 +150,8 @@
                                         </div>
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h4><span>Research Assistant</span> Electric Vehicle Engineering and robotics (EVER) Lab @ Sastra University </h4>
+                                                <h4><span>Undergraduate Researcher</span> Electric Vehicle Engineering
+                                                    and robotics (EVER) Lab @ Sastra University </h4>
                                                 <h5>May 2016 - Nov 2017</h5>
                                             </div>
                                             <p> Worked on autonomous navigation of aerial and mobile robots in ROS.</p>
