--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li class="portfolio menu-item">Projects</li>
             <li class="blog menu-item">Blog</li>
             <li class="contact menu-item">Contact</li>
-            <li class="research menu-item">Research</li>
+            <li class="research menu-item">Publications</li>
 
             <li id="close" class="menu-item"><i class="ion-ios-close-empty"></i></li>
         </ul>
@@ -42,10 +42,14 @@
                     <a class="btn btn-download" href="/docs/CV-Hemanth_Kandula.pdf" target="_blank">Download Resume</a>
                     <ul class="social">
                         <li><a href="https://github.com/hemanthkandula" target="_blank" ><i class="ion-social-github"></i></a></li>
+                        <li><a href="https://scholar.google.co.in/citations?hl=en&user=0lXfmjwAAAAJ" target="_blank"><i
+                                class="ion-social-google"></i></a></li>
+
                         <!--<li><a href=""><i class="ion-social-twitter"></i></a></li>-->
-                        <li><a href=""><i class="ion-social-facebook" target="_blank"></i></a></li>
+                        <li><a href="https://www.facebook.com/hemanthkandula"><i class="ion-social-facebook"
+                                                                                 target="_blank"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/hemanthkandula" target="_blank"><i class="ion-social-linkedin"></i></a></li>
-                        <li><a href="tel: +16176318399 "><i class="ion-android-call" target="_blank"></i></a></li>
+                        <li><a href="tel: +13477665083 "><i class="ion-android-call" target="_blank"></i></a></li>
 
                     </ul>
                 </div>
@@ -73,7 +77,7 @@
                 </div>
                 <div class="research-block  menu-block">
                     <div class="research-block-container">
-                        <h2 class="research menu-item">research</h2>
+                        <h2 class="research menu-item">Publications</h2>
                     </div>
                 </div>
             </div>
@@ -577,7 +581,7 @@
                                     </div>
                                     <div class="contact-details">
                                         <h5>Call Me</h5>
-                                        <p> <a href="tel: +16176318399 ">+ 1(617)631-8399</a></p>
+                                        <p><a href="tel: +13477665083 ">+ 1(347)766-5083</a></p>
                                     </div>
                                 </div>
                                 <div class="contact-content">
@@ -604,9 +608,19 @@
             <div class="content-blocks research">
                 <section class="content">
                     <div class="block-content">
-                        <h3 class="block-title">Research</h3>
+                        <h3 class="block-title">Publications</h3>
 
-                        <h2><strong>coming soon (sorry, I know these placeholders are annoying)</strong></h2>
+
+                        <ol style="list-style-type: upper-roman;">
+                            <li>Potluri V*, P S Kathiresan*, <strong>H Kandula</strong>, P Thirumalaraju, MK
+                                Kanakasabapathy, SKS Pavan, D Yarravarapu, A Soundarrajan, K Baskar, R Gupta, N
+                                Gudipati, JC Petrozza, and H Shafiee, &ldquo;<em>An inexpensive smartphone-based device
+                                    for point-of-care ovulation testing</em>.&rdquo; <strong>Lab on a Chip.</strong>
+                                (featured as cover) DOI:<a href="https://doi.org/10.1039/C8LC00792F" target="_blank">10.1039/C8LC00792F</a>
+                            </li>
+                        </ol>
+
+
                     </div>
                 </section>
             </div>
