--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <li><a href="https://www.facebook.com/hemanthkandula"><i class="ion-social-facebook"
                                                                                  target="_blank"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/hemanthkandula" target="_blank"><i class="ion-social-linkedin"></i></a></li>
-                        <li><a href="tel: +13477665083 "><i class="ion-android-call" target="_blank"></i></a></li>
+                        <li><a href="tel: mail me"><i class="ion-android-call" target="_blank"></i></a></li>
 
                     </ul>
                 </div>
@@ -108,10 +108,10 @@
                             traditional and computational imaging system.</p>
                         <div class="info-list row">
                             <div class="col-sm-6"><span>Name : </span> Sai Hemanth Kumar Kandula</div>
-                            <div class="col-sm-6"><span>Date of birth : </span> May 28, 1997</div>
+                            <div class="col-sm-6"><span>Date of birth : </span> </div>
                             <div class="col-sm-6"><span>Address : </span> Cambridge ,USA.</div>
                             <div class="col-sm-6"><span>Email : </span> shkandula[a]bwh.harvard.edu</div>
-                            <div class="col-sm-6"><span>Phone : </span> + 1(347)766-5083</div>
+                            <div class="col-sm-6"><span>Phone : </span> + mail me</div>
                             <!--<div class="col-sm-6"><span>Skype : </span> James.Bond</div>-->
                             <!--<div class="col-sm-6"><span>Interest : </span> freelance, full-time</div>-->
                         </div>
