--- a/index.html
+++ b/index.html
@@ -687,14 +687,14 @@
 
 
 
-                        <ol style="list-style-type: upper-roman;">
-                            <li>Potluri V*, P S Kathiresan*, <strong>H Kandula</strong>, P Thirumalaraju, MK
-                                Kanakasabapathy, SKS Pavan, D Yarravarapu, A Soundarrajan, K Baskar, R Gupta, N
-                                Gudipati, JC Petrozza, and H Shafiee, &ldquo;<em>An inexpensive smartphone-based device
-                                    for point-of-care ovulation testing</em>.&rdquo; <strong>Lab on a Chip.</strong>
-                                (featured as cover) DOI:<a href="https://doi.org/10.1039/C8LC00792F" target="_blank">10.1039/C8LC00792F</a>
-                            </li>
-                        </ol>
+<!--                        <ol style="list-style-type: upper-roman;">-->
+<!--                            <li>Potluri V*, P S Kathiresan*, <strong>H Kandula</strong>, P Thirumalaraju, MK-->
+<!--                                Kanakasabapathy, SKS Pavan, D Yarravarapu, A Soundarrajan, K Baskar, R Gupta, N-->
+<!--                                Gudipati, JC Petrozza, and H Shafiee, &ldquo;<em>An inexpensive smartphone-based device-->
+<!--                                    for point-of-care ovulation testing</em>.&rdquo; <strong>Lab on a Chip.</strong>-->
+<!--                                (featured as cover) DOI:<a href="https://doi.org/10.1039/C8LC00792F" target="_blank">10.1039/C8LC00792F</a>-->
+<!--                            </li>-->
+<!--                        </ol>-->
 
 
 
