--- a/index.html
+++ b/index.html
@@ -100,12 +100,30 @@
                 <section class="content" id="about">
                     <div class="block-content">
                         <h3 class="block-title">Profile</h3>
-                        <h3 class="subheading">Hi... I'm a <strong>AI Researcher & APP Developer</strong> with almost 4 years of experience in the field of deep learning and healthcare.
-                            I aim to make a difference through my creative solutions.</h3>
-                        <p> My current research is focused Deep Learning to solve problems in healthcare particularly in field of unsupervised domain adaption, out-of-distribution detection in biomedical domain.
-                        <br>Passionate in solving real-world challenges with Machine learning, data science, and robotics.<br>I am also a CS graduate student at Tufts University, worked on deep Reinforcement Learning, and NLP projects.
-                       <br>I am an enthusiastic person always loves to explore anything that excites me. <br>
-                            Feel free to reach out to me about anything! </p>
+                        <h3 class="subheading">Hi... I'm a <strong>AI Researcher & APP Developer</strong> with 5+ years of academic and professional experience in the field of deep learning for Healthcare and Robotics.
+                           </h3>
+                        <h3> •  Led multi‑phased research initiatives with a direct impact on patient healthcare</h3>
+
+
+<!--                        <p> My current research is focused Deep Learning to solve problems in healthcare particularly in field of unsupervised domain adaption, out-of-distribution detection in biomedical domain.-->
+<!--                        <br>Passionate in solving real-world challenges with Machine learning, data science, and robotics.<br>I am also a CS graduate student at Tufts University, worked on deep Reinforcement Learning, and NLP projects.-->
+<!--                       <br>I am an enthusiastic person always loves to explore anything that excites me. <br>-->
+<!--                            Feel free to reach out to me about anything! </p>-->
+                        <br>
+
+                        <p>I am currently doing research at Harvard Medical School in Cambridge, MA where I use Deep Learning to solve a few of the major unmet needs in Healthcare. <br>
+                        In my recent project, I developed learning algorithms that facilitate the transfer of information through  <br>
+                            unsupervised and self-supervised model adaptation and generalization for biomedical imaging. (Published in Nature BME). <br>
+                        </p>
+
+                        <p> Enthusiastic in solving real-world challenges with Machine learning, Data Science, and Robotics.</p>
+
+                        <p> I am also a Computer Science Graduate specialized in Artificial Intelligence and Data Science from Tufts University, worked on Reinforcement Learning, and NLP projects.</p>
+
+                        <p>Above all, I am an enthusiastic person who always loves to explore anything that excites me. I believe AI is the future and envision to contribute this ever-growing community and work on amazing things it has to offer.
+
+                        Feel free to reach out to me about anything!</p>
+
 
 
                         <div class="info-list row">
@@ -117,7 +135,7 @@
                             <!--<div class="col-sm-6"><span>Skype : </span> James.Bond</div>-->
                             <!--<div class="col-sm-6"><span>Interest : </span> freelance, full-time</div>-->
                         </div>
-                        <img class="sign" src="images/signature1.png" alt="" />
+<!--                        <img class="sign" src="images/signature1.png" alt="" />-->
                     </div>
                     <!--<div class="block-content">-->
                         <!--<h3 class="block-title">Skills</h3>-->
@@ -146,6 +164,25 @@
                             <!--</div>-->
                         <!--</div>-->
                     <!--</div>-->
+
+                    <div class="block-content">
+                        <h3 class="block-title">🔨 Languages and Tools:</h3>
+
+                        <a href="https://pytorch.org/" target="_blank"> <img align="left" src="icons/pytorch/pytorch.svg" alt="pytorch" height="42px"/> </a>
+                        <a href="https://www.tensorflow.org" target="_blank"> <img align="left" src="icons/tensorflow/tensorflow.svg" alt="tensorflow" height="42px"/> </a>
+                        <a href="https://www.python.org" target="_blank"><img align="left" alt="Python" height ="42px" src="icons/python/python.svg"></a>
+                        <a href="https://developer.android.com" target="_blank"> <img align="left" alt="Android" height ="42px" src="icons/android/android.svg"> </a>
+                        <a href="https://kotlinlang.org" target="_blank"><img align="left" alt="Kotlin" height ="42px" src="icons/kotlin/kotlin.svg"></a>
+                        <a href="https://www.java.com" target="_blank"><img align="left" alt="Java" height ="42px" src="icons/java/java.svg"></a>
+                        <a href="https://firebase.google.com/" target="_blank"> <img align="left" src="icons/firebase/firebase.svg" alt="firebase" height ="42px"/> </a>
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank"> <img align="left" alt="JavaScript" height ="42px"  src="icons/javascript/javascript.svg"> </a>
+                        <a href="https://vuejs.org/" target="_blank"> <img align="left" alt="Vue.js" height ="42px" src="icons/vue/vue.svg"></a>
+                        <a href="https://nodejs.org" target="_blank"><img align="left" alt="Node.js" height ="42px" src="icons/node/node.svg"></a>
+                        <a href="https://git-scm.com/" target="_blank"> <img src="icons/git-scm/git-scm.svg" align="left" alt="git" height='42px'/> </a>
+                        <a href="https://www.docker.com/" target="_blank"> <img src="icons/docker/docker.png" align="left" width="76px" height="76px" alt="docker" height='42px'/> </a>
+                        <a href="https://aws.amazon.com/" target="_blank"> <img src="icons/aws/Amazon_Web_Services_Logo.svg" align="left" alt="amazon_aws"  width="76px" height="76px"/> </a>
+
+                    </div>
                     <div class="block-content">
                         <h3 class="block-title">Research Experience</h3>
                         <div class="timeline experience">
@@ -154,34 +191,23 @@
                                     <div class="exp-holder">
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h3><span>Research Assistant</span>, Harvard Medical School
-                                                </h3>
+                                                <h3><span>Research Assistant </span> Shafiee Lab, Harvard Medical School</h3>
                                                 <h5>Dec 2017 - <span class="current">Present</span></h5>
                                             </div>
-                                            <p>  Worked with a diverse team of clinicians and engineers in Dr. Hadi Shafiee’s group solving problems in healthcare using Biotechnology and machine learning.
-                                            </p>
-                                               <ul>
-                                                   <li>• Contributed to development and evaluation of novel Deep Learning and Healthcare research with 14+ journal and conference articles
-                                                   </li>
-                                                   <li>
-                                                       • Research focused on unsupervised domain adaption, discriminative and generative models for medical imaging problems
-                                                   </li>
-                                                   <li>
-                                                   • Developed and trained deep learning models with PyTorch, TensorFlow and Keras
-                                                   </li>
-                                                   <li>
-                                                   • Developed various medical image data acquisition and annotation web/mobile apps for clinicians
-                                                   </li>
-                                                   <li>
-                                                   • Deployed ML algorithms for software distribution in Android/Web applications.
-                                                   </li>
-                                                   <li>
-                                                   • Helped building point‑of‑care biomedical devices and interfacing with embedded internet of things(IoT) systems and related smartphone apps
-                                                   </li>
 
 
-                                               </ul>
 
+                                            <p> Managed projects that solved few of the major unmet needs in human fertility, viral diagnostics with a diverse team of clinicians and engineers resulted in 14+ journal and conference articles.</p>
+                                            <ul>
+                                                <li>•  Designed two state-of-the-art adversarial unsupervised and self-supervised domain adaption methods and investigated domain-shifted medical datasets. (Accepted for publication at Nature BME Journal.) </li>
+                                                <li>•  Created and curated various benchmark medical datasets of 500,000+ images for domain adaption.</li>
+                                                <li>•  Developed an automated Machine Learning framework for In Vitro fertilization (IVF) that outperformed embryologists.</li>
+                                                <li>•  Applied image processing and machine learning techniques to smartphone-based low-cost point-of-care Ovulation prediction device and deployed into an android application which predicts Ovulation at-home with 99% accuracy.</li>
+                                                <li>•  Proposed generalization method using unsupervised adversarial learning for smartphone-based COVID-19 diagnosis.</li>
+                                                <li>•  Developed web/mobile apps (Vue.js, Flask, Android) for medical image datasets acquisition and annotation, and for deploying ML algorithms that were used by clinicians from 9+ hospitals and health clinics in the US.</li>
+                                                <li>•  Built point‑of‑care low-cost diagnostics (<$1) devices interfaces with embedded internet of things (IoT) systems.</li>
+                                                <li>•  Lead & managed a team of research interns in applying computer vision and deep learning in medical imaging projects.</li>
+                                                </ul>
                                         </div>
 <!--                                        <div class="exp">-->
 <!--                                            <div class="hgroup">-->
@@ -199,9 +225,12 @@
                                             </div>
                                            <p> Worked at Electric Vehicle Engineering and Robotics (EVER) Lab in projects mobile and aerial robots</p>
                                             <ul>
-                                                <li> • Reduced high cost Lidar sensors on <a href="http://wiki.ros.org/Robots/Corobot">CoroBot (mobile robot) </a> using semantic segmentation for indoor autonomous navigation in ROS
+
+                                                <li>
+                                                    • Deployed algorithm with semantic segmentation (SegNet) for indoor autonomous navigation in ROS instead of high‑cost Lidar sensors on
+                                                    <a href="http://wiki.ros.org/Robots/Corobot">CoroBot (mobile robot) </a> which decreased costs by 40%
                                                 </li>
-                                                <li> • Worked on autonomous control of an unmanned multi-rotor (Quad-copter and tri-copter) GPS navigation for agricultural crop spraying
+                                                <li> • Designed and implemented end‑to‑end autonomous control for drone GPS navigation system for agricultural crop spraying
 
                                                 </li>
                                             </ul>
@@ -212,7 +241,8 @@
                                                 <h3><span>App Developer</span> 300dpi, SASTRA University </h3>
                                                 <h5>Aug 2016 - Oct 2017</h5>
                                             </div>
-                                            <p>Developed android applications for inter‑college cultural festivals for participants and organizers at 300dpi, design Team of SASTRA University.
+                                            <p>Developed android applications for college cultural festivals for participants and organizers of Sastra University which were used by 10,000+ students from various colleges in India.
+
                                             </p>
 
                                         </div>
@@ -231,20 +261,20 @@
                                     <div class="exp-holder">
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h4>Master of Science in Computer Science with focus in AI | <span>Tufts University</span></h4>
+                                                <h4>Master of Science in Computer Science (AI focus)| <span>Tufts University</span></h4>
                                                 <h5>Aug. 2019 - May. 2021</h5>
                                             </div>
-                                            <p><strong>Relevant Coursework:</strong>
+                                            <p><strong>Coursework:</strong>
                                                 Reinforcement Learning, Natural Language Processing, Machine Learning, Big Data, Programming Languages, Parallel Computing, Algorithms
                                             </p>
                                         </div>
 
                                         <div class="exp">
                                             <div class="hgroup">
-                                                <h4>B.Tech in Electronics and communication Engineering | <span>SASTRA University</span></h4>
+                                                <h4>B.Tech in Electronics and Communication Engineering | <span>SASTRA University</span></h4>
                                                 <h5>Jul 2014 – Jul 2018</h5>
                                             </div>
-                                            <p><strong>Bachelor Thesis:</strong> Portable Internet-of-Things enabled rapid semen analysis system.<br>
+                                            <p><strong> Thesis:</strong> Portable Internet-of-Things enabled rapid semen analysis system.<br>
                                                 <strong>Activities and Societies:</strong> Engineering Project Coordinator at Robotics Club,  Student Volunteer at National Service Scheme.</p>
 
                                         </div>
@@ -516,6 +546,41 @@
                                                     <div class="portfolio-overlay"></div>
                                                 </div>
                                                 <img src="images/portfolio/research/high_vision.png" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <!-- WORK 4 START -->
+
+                                    <!-- WORK 4 START -->
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                        <a target="_blank"  href="https://devpost.com/software/smart-cane-for-visually-impaired">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Smart Cane for Visually Impaired
+                                                        </h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/smart-cane.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <!-- WORK 4 START -->
+                                    <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item ml">
+                                        <a target="_blank"  href="https://devpost.com/software/maker-ai-8jvox6">
+                                            <div class="portfolio-column">
+                                                <div class="portfolio-hover">
+                                                    <div class="portfolio-content">
+                                                        <h2>Make AI</h2>
+                                                        <hr>
+                                                        <p>View details.</p>
+                                                    </div>
+                                                    <div class="portfolio-overlay"></div>
+                                                </div>
+                                                <img src="images/portfolio/research/make.ai.jpg" alt="">
                                             </div>
                                         </a>
                                     </div>
